@@ -30,7 +30,7 @@ env = ds.env()
 
 det = AreaDetector(src, env, pbits=0)
 det.print_attributes()
-mask = det.mask(evt, calib=True, status=True, edges=True, central=True, unbond=True, unbondnbrs=True)
+mask = det.mask(evt, calib=True, status=True, edges=True, central=True, unbond=True, unbondnbrs=True) #, unbondnbrs8=True)
 print_ndarr(mask, 'mask')
 
 ##-----------------------------
